# fastapi-sst-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt  sst.config.ts  sst.pyi
functions/: pyproject.toml
functions/src/functions/: main.py
